--- a/app/src/main/res/layout/grid_layout.xml
+++ b/app/src/main/res/layout/grid_layout.xml
@@ -1,49 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#1d2951">
-
-
-<EditText
-    android:id="@+id/input"
-    android:layout_width="250dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    android:layout_marginLeft="20dp"
-    android:layout_marginTop="40dp"
-    android:padding="10dp"
-    android:hint="Enter City"
-    android:textColor="@color/white"
-    android:background="@drawable/edit_text_bg"></EditText>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/grid"
+    android:padding="20dp"
+android:layout_margin="20dp"
+    android:id="@+id/grid">
 
-    <Button
-        android:id="@+id/addButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/input"></Button>
+
+
 
    <androidx.cardview.widget.CardView
-       android:layout_width="150dp"
+       android:layout_width="160dp"
        android:layout_height="150dp"
-       app:layout_constraintTop_toBottomOf="@id/input"
+       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
-       android:layout_marginLeft="20dp"
        android:background="#808080"
-       android:layout_marginTop="40dp">
+      >
 
 
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-
+          android:background="@drawable/grid"
           >
      <TextView
          android:id="@+id/temperature"
@@ -83,12 +64,11 @@
           <ImageView
               android:id="@+id/imageView"
               android:layout_width="33dp"
-              android:layout_height="39dp"
+              android:layout_height="35dp"
               app:srcCompat="@drawable/ic_launcher_background"
-              app:layout_constraintLeft_toRightOf="@+id/temperature"
-              android:layout_marginLeft="30dp"
-              android:layout_marginTop="10dp"
-             app:layout_constraintTop_toTopOf="parent" />
+              app:layout_constraintLeft_toRightOf="@+id/country"
+              android:layout_marginLeft="20dp"
+              app:layout_constraintTop_toBottomOf="@id/city" />
 
       </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -96,4 +76,4 @@
 
    </androidx.cardview.widget.CardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
